# Quart_React_Todo-App

./: package.json  readme.md
backend/: pyproject.toml
backend/src/: backend.py
flowbite-react-app/: package.json
flowbite-react-app/src/: App.tsx  index.tsx
flowbite-react-app/src/components/: footer.tsx  layout.js  navbar.tsx
flowbite-react-app/src/pages/: about.tsx  home.tsx
frontend/: package.json
frontend/src/: App.js  CreateItem.css  CreateItem.js  Items.css  Items.js
